2021-02-12  Mark Wielaard  <mark@klomp.org>

	* run-readelf-types.sh: Add CU start to type offset reference.

2021-02-07  Alexander Miller  <alex.miller@gmx.de>

	* Makefile.am (TESTS_ENVIRONMENT): Quote variables.
	(valgrind_cmd): Unquote variable.

2021-02-08  Érico Nogueira  <ericonr@disroot.org>

	* run-debuginfod-find.sh: Check for cpio availability.

2021-02-04  Frank Ch. Eigler <fche@redhat.com>

	* run-debuginfod-find.sh: Smoke test --fdcache-mintmp option handling.

2021-01-31  Sergei Trofimovich  <slyfox@gentoo.org>

	* Makefile.am (TESTS_ENVIRONMENT): export CC variable
	to tests for use instead of 'gcc'.
	* run-disasm-x86-64.sh: use ${CC} instead of 'gcc'.
	* run-disasm-x86.sh: Likewise.
	* run-strip-g.sh: Likewise.
	* run-strip-nothing.sh: Likewise.
	* run-test-includes.sh: Likewise.

2021-01-06  Timm Bäder  <tbaeder@redhat.com>

	* zstrptr.c (main): Lift print_strings function up to ...
	(print_strings): ... here. New file scope function taking
	Elf_Scn*, Elf* and ndx as arguments.

2020-12-20  Dmitry V. Levin  <ldv@altlinux.org>

	* .gitignore: New file.

2020-12-12  Mark Wielaard  <mark@klomp.org>

	* testfile-retain.o.bz2: New test file.
	* run-retain.sh: New test.
	* Makefile.am (TESTS): Add run-retain.sh.
	(EXTRA_DIST): Add run-retain.sh and testfile-retain.o.bz2

2020-12-16  Dmitry V. Levin  <ldv@altlinux.org>

	* dwflmodtest.c (N_): Remove.

2020-12-12  Dmitry V. Levin  <ldv@altlinux.org>

	* dwarf-die-addr-die.c (main): Fix spelling typo in error diagnostics.
	* run-lfs-symbols.sh: Likewise.
	* elfstrmerge.c (main): Fix spelling typos in comments.
	* dwfl-bug-fd-leak.c: Likewise.
	* run-readelf-line.sh: Likewise.
	* run-stack-demangled-test.sh: Likewise.
	* sectiondump.c (main): Likewise.
	* varlocs.c (handle_die): Likewise.

2020-12-11  Dmitry V. Levin  <ldv@altlinux.org>

	* configure.ac: Remove.
	* Makefile.am [STANDALONE]: Remove.
	(check_PROGRAMS): Add msg_tst, system-elf-libelf-test, and $(asm_TESTS)
	unconditionally.